[gd_scene load_steps=16 format=2]

[ext_resource path="res://scenes/bots/player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/level/_base/_BaseLevel.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/level/tileset/brown/TileMapBrown.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/level/next zone/NextZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/level/tileset/brown/DoorBrown.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/bots/artillery/ArtilleryController.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/level/tileset/brown/TileMapBrownLow.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/bots/artillery/LongArtilleryBot.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/bots/artillery/FastArtilleryBot.tscn" type="PackedScene" id=9]
[ext_resource path="res://levels proper/3-1_area/Area3-1.gd" type="Script" id=10]
[ext_resource path="res://scenes/bots/fighter/Fighter.tscn" type="PackedScene" id=12]
[ext_resource path="res://scenes/bots/charger/Charger.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/bots/fighter/FighterBig.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/bots/heavy fighter/HeavyFighter.tscn" type="PackedScene" id=15]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.25
bounce = 0.5

[node name="Area3-1" instance=ExtResource( 2 )]
script = ExtResource( 10 )
disp_name = "Area 3-1"

[node name="TileMapBrown" parent="Nav" index="0" instance=ExtResource( 3 )]
tile_data = PoolIntArray( -1245184, -1610612733, 0, -1245183, -1073741821, 0, -1245182, 1610612736, 0, -1245181, 1610612736, 0, -1245180, -1610612733, 0, -1245179, -1073741821, 0, -1245178, 1610612736, 0, -1245177, 1610612736, 0, -1245176, 1610612736, 0, -1245175, 1610612736, 0, -1245174, 1610612736, 0, -1245173, 1610612736, 0, -1245172, 1610612736, 0, -1245171, 1610612736, 0, -1245170, 6, 0, -1179648, -1610612733, 0, -1179647, -1073741821, 0, -1179646, 1610612736, 0, -1179645, 1610612736, 0, -1179644, -1610612733, 0, -1179643, -1073741821, 0, -1179642, 1610612736, 0, -1179641, 1610612736, 0, -1179640, 1610612736, 0, -1179639, 1610612736, 0, -1179638, 1610612736, 0, -1179637, 1610612736, 0, -1179636, 1610612736, 0, -1179635, 6, 0, -1048585, -1610612730, 0, -1114112, -1610612733, 0, -1114111, -1073741821, 0, -1114110, 1610612736, 0, -1114109, 1610612736, 0, -1114108, -1610612733, 0, -1114107, -1073741821, 0, -1114106, 1610612736, 0, -1114105, 1610612736, 0, -1114104, 1610612736, 0, -1114103, 1610612736, 0, -1114102, 1610612736, 0, -1114101, 1610612736, 0, -1114100, 6, 0, -983048, -1610612730, 0, -1048576, -1610612733, 0, -1048575, -1073741821, 0, -1048574, 1610612736, 0, -1048573, 1610612736, 0, -1048572, -1610612733, 0, -1048571, -1073741821, 0, -1048570, 1610612736, 0, -1048569, 1610612736, 0, -1048568, 1610612736, 0, -1048567, 1610612736, 0, -1048566, 1610612736, 0, -1048565, 1610612736, 0, -1048564, -1610612733, 0, -917511, -1610612730, 0, -983040, -1610612733, 0, -983039, -1073741821, 0, -983038, 1610612736, 0, -983037, 1610612736, 0, -983036, -1610612733, 0, -983035, -1073741821, 0, -983034, 1610612736, 0, -983033, 1610612736, 0, -983032, 1610612736, 0, -983031, 1610612736, 0, -983030, 1610612736, 0, -983029, 1610612736, 0, -983028, -1610612733, 0, -851974, -1610612730, 0, -917504, -1610612733, 0, -917503, -1073741821, 0, -917502, 1610612736, 0, -917501, 1610612736, 0, -917500, -1610612733, 0, -917499, -1073741821, 0, -917498, 1610612736, 0, -917497, 1610612736, 0, -917496, 1610612736, 0, -917495, 1610612736, 0, -917494, 1610612736, 0, -917493, 1610612736, 0, -917492, -1610612733, 0, -786437, -1610612730, 0, -851968, -1610612733, 0, -851967, -1073741821, 0, -851966, 1610612736, 0, -851965, 1610612736, 0, -851964, -1610612733, 0, -851963, -1073741821, 0, -851962, 1610612736, 0, -851961, 1610612736, 0, -851960, 1610612736, 0, -851959, 1610612736, 0, -851958, 1610612736, 0, -851957, 1610612736, 0, -851956, -1610612733, 0, -720900, -1610612730, 0, -786432, -1610612733, 0, -786431, -1073741821, 0, -786430, 1610612736, 0, -786429, 1610612736, 0, -786428, -1610612733, 0, -786427, -1073741821, 0, -786426, 1610612736, 0, -786425, 1610612736, 0, -786424, 1610612736, 0, -786423, 1610612736, 0, -786422, 1610612736, 0, -786421, 1610612736, 0, -786420, -1610612733, 0, -655364, -1610612729, 0, -655363, 1610612739, 0, -655362, 1610612739, 0, -655361, 1610612739, 0, -720896, 1610612741, 0, -720895, -1073741821, 0, -720894, 1610612736, 0, -720893, 1610612736, 0, -720892, -1610612733, 0, -720891, -1073741819, 0, -720890, 1610612739, 0, -720889, 1610612739, 0, -720888, 1610612739, 0, -720887, 1610612739, 0, -720886, 1610612739, 0, -720885, 1610612739, 0, -720884, 1610612741, 0, -589828, 5, 0, -589827, 3, 0, -589826, 3, 0, -589825, 3, 0, -655360, 3, 0, -655359, 4, 0, -655358, 1610612736, 0, -655357, 1610612736, 0, -655356, -1610612732, 0, -655355, 3, 0, -655354, 3, 0, -655353, 3, 0, -655352, 3, 0, -655351, 3, 0, -655350, 3, 0, -655349, -1073741817, 0, -524292, -1073741821, 0, -524291, 1610612736, 0, -524290, 1610612736, 0, -524289, 1610612736, 0, -589824, 1610612736, 0, -589823, 1610612736, 0, -589822, 1610612736, 0, -589821, 1610612736, 0, -589820, 1610612736, 0, -589819, 1610612736, 0, -589818, 1610612736, 0, -589817, 1610612736, 0, -589816, 1610612736, 0, -589815, 1610612736, 0, -589814, 1610612736, 0, -589813, -1073741818, 0, -589812, -1073741817, 0, -458756, -1073741821, 0, -458755, 1610612736, 0, -458754, 1610612736, 0, -458753, 1610612736, 0, -524288, 1610612736, 0, -524287, 1610612736, 0, -524286, 1610612736, 0, -524285, 1610612736, 0, -524284, 1610612736, 0, -524283, 1610612736, 0, -524282, 1610612736, 0, -524281, 1610612736, 0, -524280, 1610612736, 0, -524279, 1610612736, 0, -524278, 1610612736, 0, -524277, 1610612736, 0, -524276, -1073741818, 0, -524275, -1073741817, 0, -393220, -1073741821, 0, -393219, 1610612736, 0, -393218, 1610612736, 0, -393217, 1610612736, 0, -458752, 1610612736, 0, -458751, 1610612736, 0, -458750, 1610612736, 0, -458749, 1610612736, 0, -458748, 1610612736, 0, -458747, 1610612736, 0, -458746, 1610612736, 0, -458745, 1610612736, 0, -458744, 1610612736, 0, -458743, 1610612736, 0, -458742, 1610612736, 0, -458741, 1610612736, 0, -458740, 1610612736, 0, -458739, -1073741818, 0, -458738, -1073741817, 0, -327684, -1073741819, 0, -327683, 1610612736, 0, -327682, 1610612736, 0, -327681, 1610612736, 0, -393216, 1610612736, 0, -393215, 1610612736, 0, -393214, 1610612736, 0, -393213, 1610612736, 0, -393212, 1610612736, 0, -393211, 1610612736, 0, -393210, 1610612736, 0, -393209, 1610612736, 0, -393208, 1610612736, 0, -393207, 1610612736, 0, -393206, 1610612736, 0, -393205, 1610612736, 0, -393204, 1610612736, 0, -393203, 1610612736, 0, -393202, -1073741818, 0, -393201, -1073741817, 0, -262148, 5, 0, -262147, 1610612736, 0, -262146, 1610612736, 0, -262145, 1610612736, 0, -327680, 1610612736, 0, -327679, 1610612736, 0, -327678, 1610612736, 0, -327677, 1610612736, 0, -327676, 1610612736, 0, -327675, 1610612736, 0, -327674, 1610612736, 0, -327673, 1610612736, 0, -327672, 1610612736, 0, -327671, 1610612736, 0, -327670, 1610612736, 0, -327669, 1610612736, 0, -327668, 1610612736, 0, -327667, 1610612736, 0, -327666, 1610612736, 0, -327665, -1073741818, 0, -327664, 3, 0, -327663, 3, 0, -327662, 3, 0, -327661, 3, 0, -327660, 3, 0, -327659, 3, 0, -327658, -1610612731, 0, -196612, -1073741821, 0, -196611, 1610612736, 0, -196610, 1610612736, 0, -196609, 1610612736, 0, -262144, 1610612736, 0, -262143, 1610612736, 0, -262142, 1610612736, 0, -262141, 1610612736, 0, -262140, 1610612736, 0, -262139, 1610612736, 0, -262138, 1610612736, 0, -262137, 1610612736, 0, -262136, 1610612736, 0, -262135, 1610612736, 0, -262134, 1610612736, 0, -262133, 1610612736, 0, -262132, 1610612736, 0, -262131, 1610612736, 0, -262130, 1610612736, 0, -262129, 1610612736, 0, -262128, 1610612736, 0, -262127, 1610612736, 0, -262126, 1610612736, 0, -262125, 1610612736, 0, -262124, 1610612736, 0, -262123, 1610612736, 0, -262122, -1610612733, 0, -131076, -1073741821, 0, -131075, 1610612736, 0, -131074, 1610612736, 0, -131073, 1610612736, 0, -196608, 1610612736, 0, -196607, 1610612736, 0, -196606, 1610612736, 0, -196605, 1610612736, 0, -196604, 1610612736, 0, -196603, 1610612736, 0, -196602, 1610612736, 0, -196601, 1610612736, 0, -196600, 1610612736, 0, -196599, 1610612736, 0, -196598, 1610612736, 0, -196597, 1610612736, 0, -196596, 1610612736, 0, -196595, 1610612736, 0, -196594, 1610612736, 0, -196593, 1610612736, 0, -196592, 1610612736, 0, -196591, 1610612736, 0, -196590, 1610612736, 0, -196589, 1610612736, 0, -196588, 1610612736, 0, -196587, 1610612736, 0, -196586, -1610612733, 0, -65562, 3, 0, -65561, 3, 0, -65560, 3, 0, -65559, 3, 0, -65558, 3, 0, -65557, 3, 0, -65556, 3, 0, -65555, 3, 0, -65554, 3, 0, -65553, 3, 0, -65552, 3, 0, -65551, 3, 0, -65550, 3, 0, -65549, 3, 0, -65548, 3, 0, -65547, 3, 0, -65546, 3, 0, -65545, 3, 0, -65544, 3, 0, -65543, 3, 0, -65542, 3, 0, -65541, 3, 0, -65540, 4, 0, -65539, 1610612736, 0, -65538, 1610612736, 0, -65537, 1610612736, 0, -131072, 1610612736, 0, -131071, 1610612736, 0, -131070, 1610612736, 0, -131069, 1610612736, 0, -131068, 1610612736, 0, -131067, 1610612736, 0, -131066, 1610612736, 0, -131065, 1610612736, 0, -131064, 1610612736, 0, -131063, 1610612736, 0, -131062, 1610612736, 0, -131061, 1610612736, 0, -131060, 1610612736, 0, -131059, 1610612740, 0, -131058, 1610612739, 0, -131057, 1610612739, 0, -131056, 1610612739, 0, -131055, 1610612739, 0, -131054, 1610612739, 0, -131053, 1610612739, 0, -131052, -1073741820, 0, -131051, 1610612736, 0, -131050, -1610612733, 0, -26, 1610612736, 0, -25, 1610612736, 0, -24, 1610612736, 0, -23, 1610612736, 0, -22, 1610612736, 0, -21, 1610612736, 0, -20, 1610612736, 0, -19, 1610612736, 0, -18, 1610612736, 0, -17, 1610612736, 0, -16, 1610612736, 0, -15, 1610612736, 0, -14, 1610612736, 0, -13, 1610612736, 0, -12, 1610612736, 0, -11, 1610612736, 0, -10, 1610612736, 0, -9, 1610612736, 0, -8, 1610612736, 0, -7, 1610612736, 0, -6, 1610612736, 0, -5, 1610612736, 0, -4, 1610612736, 0, -3, 1610612736, 0, -2, 1610612736, 0, -1, 1610612736, 0, -65536, 1610612736, 0, -65535, 1610612736, 0, -65534, 1610612736, 0, -65533, 1610612736, 0, -65532, 1610612736, 0, -65531, 1610612736, 0, -65530, 1610612736, 0, -65529, 1610612736, 0, -65528, 1610612736, 0, -65527, 1610612736, 0, -65526, 1610612736, 0, -65525, 1610612736, 0, -65524, 1610612736, 0, -65523, -1610612732, 0, -65522, 3, 0, -65521, 3, 0, -65520, 3, 0, -65519, 3, 0, -65518, 3, 0, -65517, 3, 0, -65516, 4, 0, -65515, 1610612736, 0, -65514, -1610612733, 0, 65510, 1610612739, 0, 65511, 1610612739, 0, 65512, 1610612739, 0, 65513, 1610612739, 0, 65514, 1610612739, 0, 65515, 1610612739, 0, 65516, 1610612739, 0, 65517, 1610612739, 0, 65518, 1610612739, 0, 65519, 1610612739, 0, 65520, 1610612739, 0, 65521, 1610612739, 0, 65522, 1610612739, 0, 65523, 1610612739, 0, 65524, 1610612739, 0, 65525, 1610612739, 0, 65526, 1610612739, 0, 65527, 1610612739, 0, 65528, 1610612739, 0, 65529, 1610612739, 0, 65530, 1610612739, 0, 65531, 1610612739, 0, 65532, -1073741820, 0, 65533, 1610612736, 0, 65534, 1610612736, 0, 65535, 1610612736, 0, 0, 1610612736, 0, 1, 1610612736, 0, 2, 1610612736, 0, 3, 1610612736, 0, 4, 1610612736, 0, 5, 1610612736, 0, 6, 1610612736, 0, 7, 1610612736, 0, 8, 1610612736, 0, 9, 1610612736, 0, 10, 1610612736, 0, 11, 1610612736, 0, 12, 1610612736, 0, 13, 1610612736, 0, 14, 1610612736, 0, 15, 1610612736, 0, 16, 1610612736, 0, 17, 1610612736, 0, 18, 1610612736, 0, 19, 1610612736, 0, 20, 1610612736, 0, 21, 1610612736, 0, 22, -1073741818, 0, 23, -1073741817, 0, 131068, -1073741821, 0, 131069, 1610612736, 0, 131070, 1610612736, 0, 131071, 1610612736, 0, 65536, 1610612736, 0, 65537, 1610612736, 0, 65538, 1610612736, 0, 65539, 1610612736, 0, 65540, 1610612736, 0, 65541, 1610612736, 0, 65542, 1610612736, 0, 65543, 1610612736, 0, 65544, 1610612736, 0, 65545, 1610612736, 0, 65546, 1610612736, 0, 65547, 1610612736, 0, 65548, 1610612736, 0, 65549, 1610612736, 0, 65550, 1610612736, 0, 65551, 1610612736, 0, 65552, 1610612736, 0, 65553, 1610612736, 0, 65554, 1610612736, 0, 65555, 1610612736, 0, 65556, 1610612736, 0, 65557, 1610612736, 0, 65558, 1610612736, 0, 65559, -1073741818, 0, 65560, -1073741817, 0, 196604, -1073741821, 0, 196605, 1610612736, 0, 196606, 1610612736, 0, 196607, 1610612736, 0, 131072, 1610612736, 0, 131073, 1610612736, 0, 131074, 1610612736, 0, 131075, 1610612736, 0, 131076, 1610612736, 0, 131077, 1610612736, 0, 131078, 1610612736, 0, 131079, 1610612736, 0, 131080, 1610612736, 0, 131081, 1610612736, 0, 131082, 1610612736, 0, 131083, 1610612736, 0, 131084, 1610612736, 0, 131085, 1610612736, 0, 131086, 6, 0, 131087, 1610612739, 0, 131088, 1610612739, 0, 131089, 1610612739, 0, 131090, 1610612739, 0, 131091, 1610612739, 0, 131092, 1610612739, 0, 131093, 1610612739, 0, 131094, -1610612730, 0, 131095, 1610612736, 0, 131096, -1073741818, 0, 131097, 3, 0, 131098, 3, 0, 131099, 3, 0, 131100, 3, 0, 131101, 3, 0, 131102, 3, 0, 131103, 3, 0, 131104, 3, 0, 131105, 3, 0, 131106, 3, 0, 131107, 3, 0, 131108, 3, 0, 131109, 3, 0, 131110, 3, 0, 131111, 3, 0, 131112, 3, 0, 131113, 3, 0, 131114, 3, 0, 131115, 3, 0, 131116, 3, 0, 262140, -1610612729, 0, 262141, -1610612730, 0, 262142, 1610612736, 0, 262143, 1610612736, 0, 196608, 1610612736, 0, 196609, 1610612736, 0, 196610, 1610612736, 0, 196611, 1610612736, 0, 196612, 1610612736, 0, 196613, 1610612736, 0, 196614, 1610612736, 0, 196615, 1610612736, 0, 196616, 1610612736, 0, 196617, 1610612736, 0, 196618, 1610612736, 0, 196619, 1610612736, 0, 196620, 1610612736, 0, 196621, 6, 0, 196622, 7, 0, 196630, -1610612729, 0, 196631, -1610612730, 0, 196632, 1610612736, 0, 196633, 1610612736, 0, 196634, 1610612736, 0, 196635, 1610612736, 0, 196636, 1610612736, 0, 196637, 1610612736, 0, 196638, 1610612736, 0, 196639, 1610612736, 0, 196640, 1610612736, 0, 196641, 1610612736, 0, 196642, 1610612736, 0, 196643, 1610612736, 0, 196644, 1610612736, 0, 196645, 1610612736, 0, 196646, 1610612736, 0, 196647, 1610612736, 0, 196648, 1610612736, 0, 196649, 1610612736, 0, 196650, 1610612736, 0, 196651, 1610612736, 0, 196652, 1610612736, 0, 327677, -1610612729, 0, 327678, -1610612730, 0, 327679, 1610612736, 0, 262144, 1610612736, 0, 262145, 1610612736, 0, 262146, 1610612736, 0, 262147, 1610612736, 0, 262148, 1610612736, 0, 262149, 1610612736, 0, 262150, 1610612736, 0, 262151, 1610612736, 0, 262152, 1610612736, 0, 262153, 1610612736, 0, 262154, 1610612736, 0, 262155, 1610612736, 0, 262156, 6, 0, 262157, 7, 0, 262167, -1610612729, 0, 262168, 1610612739, 0, 262169, 1610612739, 0, 262170, 1610612739, 0, 262171, 1610612739, 0, 262172, 1610612739, 0, 262173, 1610612739, 0, 262174, 1610612739, 0, 262175, 1610612739, 0, 262176, 1610612739, 0, 262177, 1610612739, 0, 262178, 1610612739, 0, 262179, 1610612739, 0, 262180, 1610612739, 0, 262181, 1610612739, 0, 262182, 1610612739, 0, 262183, 1610612739, 0, 262184, 1610612739, 0, 262185, 1610612739, 0, 262186, 1610612739, 0, 262187, 1610612739, 0, 262188, 1610612739, 0, 393214, -1610612729, 0, 393215, 1610612739, 0, 327680, 1610612739, 0, 327681, 1610612739, 0, 327682, 1610612739, 0, 327683, 1610612739, 0, 327684, 1610612739, 0, 327685, 1610612739, 0, 327686, 1610612739, 0, 327687, 1610612739, 0, 327688, 1610612739, 0, 327689, 1610612739, 0, 327690, 1610612739, 0, 327691, 1610612739, 0, 327692, 7, 0 )

[node name="TileMapBrownLow" parent="Nav" index="1" instance=ExtResource( 7 )]
tile_data = PoolIntArray( -327683, 1610612737, 0, -327682, 1610612737, 0, -327681, 1610612737, 0, -393216, 1610612737, 0, -393215, -1073741822, 0, -393212, 1610612738, 0, -393211, 1610612737, 0, -393210, 1610612737, 0, -393209, 1610612737, 0, -393208, 1610612737, 0, -393207, 1610612737, 0, -393206, -1073741822, 0, -262147, 1, 0, -262146, 1, 0, -262145, 1, 0, -327680, 1, 0, -327679, 2, 0, -327676, -1610612734, 0, -327675, 1, 0, -327674, 1, 0, -327673, 1, 0, -327672, 1, 0, -327671, 1, 0, -327670, 2, 0 )

[node name="DoorBrown" parent="Nav" index="2" instance=ExtResource( 5 )]
position = Vector2( 386, -1302 )
scale = Vector2( 1.5, 1.5 )

[node name="Hub" parent="Access" index="0" instance=ExtResource( 4 )]
position = Vector2( -2923, -64 )
rotation = 3.14159

[node name="Area3-2" parent="Access" index="1" instance=ExtResource( 4 )]
position = Vector2( 4295, 448 )

[node name="BattleZone" parent="Access" index="2" instance=ExtResource( 4 )]
position = Vector2( 384, -2430 )
rotation = -1.5708

[node name="Player" parent="Bots" index="0" instance=ExtResource( 1 )]
position = Vector2( -2509, -81 )

[node name="LongArtilleryBot" parent="Bots" index="1" instance=ExtResource( 8 )]
position = Vector2( -121, -362 )
rotation = -1.36933
physics_material_override = SubResource( 1 )
faction = Color( 0, 1, 0, 1 )

[node name="LongArtilleryBot2" parent="Bots" index="2" instance=ExtResource( 8 )]
position = Vector2( 895, -365 )
rotation = -1.76367
physics_material_override = SubResource( 1 )
faction = Color( 0, 1, 0, 1 )

[node name="FastArtilleryBot" parent="Bots" index="3" instance=ExtResource( 9 )]
position = Vector2( 962, -949 )
rotation = -1.82869
physics_material_override = SubResource( 1 )
faction = Color( 0, 1, 0, 1 )

[node name="HeavyFighter" parent="Bots" index="4" instance=ExtResource( 15 )]
position = Vector2( 1480, -668 )
rotation = -2.22534
shield_cap = 200.0
health_cap = 200.0
deployed = true
faction = Color( 0, 1, 0, 1 )

[node name="HeavyFighter2" parent="Bots" index="5" instance=ExtResource( 15 )]
position = Vector2( 1392, -192 )
rotation = -2.22534
shield_cap = 200.0
health_cap = 200.0
deployed = true
faction = Color( 0, 1, 0, 1 )

[node name="Fighter" parent="Bots" index="6" instance=ExtResource( 12 )]
position = Vector2( -228, -880 )
rotation = -1.42296
shield_cap = 200.0
health_cap = 200.0
deployed = true
faction = Color( 0, 1, 0, 1 )

[node name="Fighter2" parent="Bots" index="7" instance=ExtResource( 12 )]
position = Vector2( 648, -848 )
rotation = -1.81168
shield_cap = 200.0
health_cap = 200.0
deployed = true
faction = Color( 0, 1, 0, 1 )

[node name="Fighter3" parent="Bots" index="8" instance=ExtResource( 12 )]
position = Vector2( 724, 280 )
rotation = -1.75674
shield_cap = 200.0
health_cap = 200.0
deployed = true
faction = Color( 0, 1, 0, 1 )

[node name="Fighter4" parent="Bots" index="9" instance=ExtResource( 12 )]
position = Vector2( 184, 384 )
rotation = -1.54409
shield_cap = 200.0
health_cap = 200.0
deployed = true
faction = Color( 0, 1, 0, 1 )

[node name="Charger" parent="Bots" index="10" instance=ExtResource( 13 )]
position = Vector2( 547, -436 )
shield_cap = 200.0
health_cap = 200.0
faction = Color( 0, 1, 0, 1 )

[node name="Charger2" parent="Bots" index="11" instance=ExtResource( 13 )]
position = Vector2( 311, -560 )
shield_cap = 200.0
health_cap = 200.0
faction = Color( 0, 1, 0, 1 )

[node name="Charger3" parent="Bots" index="12" instance=ExtResource( 13 )]
position = Vector2( -290, 318 )
shield_cap = 200.0
health_cap = 200.0
faction = Color( 0, 1, 0, 1 )

[node name="FighterBig" parent="Bots" index="13" instance=ExtResource( 14 )]
position = Vector2( 1208, -389 )
shield_cap = 300.0
health_cap = 300.0
faction = Color( 0, 1, 0, 1 )

[node name="FighterBig2" parent="Bots" index="14" instance=ExtResource( 14 )]
position = Vector2( 107, -837 )
rotation = -1.33082
shield_cap = 300.0
health_cap = 300.0
deployed = true
faction = Color( 0, 1, 0, 1 )

[node name="ArtilleryController" parent="Bots" index="15" instance=ExtResource( 6 )]
position = Vector2( -17, -185 )
shield_cap = 200.0
health_cap = 200.0
faction = Color( 0, 1, 0, 1 )

[node name="ArtilleryController2" parent="Bots" index="16" instance=ExtResource( 6 )]
position = Vector2( 789, -186 )
shield_cap = 200.0
health_cap = 200.0
faction = Color( 0, 1, 0, 1 )

[node name="ArtilleryController3" parent="Bots" index="17" instance=ExtResource( 6 )]
position = Vector2( 1143, -825 )
shield_cap = 200.0
health_cap = 200.0
faction = Color( 0, 1, 0, 1 )
